# rust_book_workspace

./: Cargo.toml  README.md
_10_generic_types_traits_and_lifetimes/: Cargo.toml
_10_generic_types_traits_and_lifetimes/src/: lib.rs
_11_writing_automated_tests/: Cargo.toml
_11_writing_automated_tests/src/: lib.rs
_12_building_a_command_line_program/: Cargo.toml
_12_building_a_command_line_program/src/: lib.rs
_13_iterators_and_closures/: Cargo.toml
_13_iterators_and_closures/src/: lib.rs
_14_cargo_and_crates_io/: Cargo.toml
_14_cargo_and_crates_io/src/: lib.rs
_15_smart_pointers/: Cargo.toml
_15_smart_pointers/src/: lib.rs
_16_fearless_concurrency/: Cargo.toml
_16_fearless_concurrency/src/: lib.rs
_17_object_oreinted_programming_in_rust/: Cargo.toml
_17_object_oreinted_programming_in_rust/src/: lib.rs
_18_patterns_and_matching/: Cargo.toml
_18_patterns_and_matching/src/: lib.rs
_19_advanced_features/: Cargo.toml
_19_advanced_features/src/: lib.rs
_1_getting_started/: Cargo.toml
_1_getting_started/src/: lib.rs
_20_building_a_multithreaded_web_server/: Cargo.toml
_20_building_a_multithreaded_web_server/src/: lib.rs
_21_appendix/: Cargo.toml
_21_appendix/src/: lib.rs
_2_programming_a_guessing_game/: Cargo.toml
_2_programming_a_guessing_game/src/: lib.rs
_3_common_programming_concepts/: Cargo.toml
_3_common_programming_concepts/src/: lib.rs
_4_understanding_owndership/: Cargo.toml
_4_understanding_owndership/src/: lib.rs
_4_understanding_ownership/: Cargo.toml
_4_understanding_ownership/src/: lib.rs
_5_using_structs_to_structure_related_data/: Cargo.toml
_5_using_structs_to_structure_related_data/src/: lib.rs
_6_enums_and_pattern_matching/: Cargo.toml
_6_enums_and_pattern_matching/src/: lib.rs
_7_packages_crates_and_modules/: Cargo.toml
_7_packages_crates_and_modules/src/: lib.rs
_7_packages_crates_and_modules/src/_7_tests/garden/: vegetables.rs
_8_common_collections/: Cargo.toml
_8_common_collections/src/: lib.rs
_9_error_handling/: Cargo.toml
_9_error_handling/src/: lib.rs
rust_book_run/: Cargo.toml
rust_book_run/src/: main.rs
rust_book_utilities/: Cargo.toml
rust_book_utilities/src/: lib.rs
