[workspace]

resolver="2"

members = [
    "_10_generic_types_traits_and_lifetimes",
    "_11_writing_automated_tests",
    "_12_building_a_command_line_program",
    "_13_iterators_and_closures",
    "_14_cargo_and_crates_io",
    "_15_smart_pointers",
    "_16_fearless_concurrency",
    "_17_object_oreinted_programming_in_rust",
    "_18_patterns_and_matching",
    "_19_advanced_features",
    "_20_building_a_multithreaded_web_server",
    "_21_appendix",
    "_2_programming_a_guessing_game",
    "_3_common_programming_concepts",
    "_4_understanding_owndership",
    "_5_using_structs_to_structure_related_data",
    "_6_enums_and_pattern_matching",
    "_7_packages_crates_and_modules",
    "_8_common_collections",
    "_9_error_handling",
    "rust_book_run",
    "rust_book_utilities",
]
